; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/ia64/extr_quadlib.c__U_Qfcomp.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/ia64/extr_quadlib.c__U_Qfcomp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_U_Qfcomp(x86_fp80 %0, x86_fp80 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca x86_fp80, align 16
  %5 = alloca x86_fp80, align 16
  store x86_fp80 %0, x86_fp80* %4, align 16
  store x86_fp80 %1, x86_fp80* %5, align 16
  %6 = load x86_fp80, x86_fp80* %4, align 16
  %7 = load x86_fp80, x86_fp80* %5, align 16
  %8 = call i64 @_U_Qfcmp(x86_fp80 %6, x86_fp80 %7, i32 4)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %18

11:                                               ; preds = %2
  %12 = load x86_fp80, x86_fp80* %4, align 16
  %13 = load x86_fp80, x86_fp80* %5, align 16
  %14 = call i64 @_U_Qfcmp(x86_fp80 %12, x86_fp80 %13, i32 22)
  %15 = icmp ne i64 %14, 0
  %16 = zext i1 %15 to i64
  %17 = select i1 %15, i32 1, i32 -1
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %11, %10
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @_U_Qfcmp(x86_fp80, x86_fp80, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
